--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-							</ul>
+						  <ul>
+						    <li><a href="index.html"><span class="icon solid fa-home">Home</span></a></li>
+						    <li><a href="portfolio/index.html"><span class="icon solid fa-th">Portfolio</span></a></li>
+						    <li><a href="about.html"><span class="icon solid fa-user">About Me</span></a></li>
+						    <li><a href="contact.html"><span class="icon solid fa-envelope">Contact</span></a></li>
+						  </ul>
 						</nav>
 
 				</div>
