Example portfolio subpage

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,49 @@
-aaa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <title>Portfolio</title>
+</head>
+<body>
+  <!-- Navigation -->
+  <nav id="nav">
+    <ul>
+      <li><a href="../index.html"><span class="icon solid fa-home"> Home</span></a></li>
+      <li><a href="index.html"><span class="icon solid fa-th"> Portfolio</span></a></li>
+      <li><a href="../about.html"><span class="icon solid fa-user"> About Me</span></a></li>
+      <li><a href="../contact.html"><span class="icon solid fa-envelope"> Contact</span></a></li>
+    </ul>
+  </nav>
+
+  <!-- Header -->
+  <header>
+    <h1>My Portfolio</h1>
+    <p>Explore some of the projects I've worked on!</p>
+  </header>
+
+  <!-- Portfolio Section -->
+  <section id="portfolio">
+    <div class="project">
+      <h2>Project 1: Project Name</h2>
+      <p>Description of the project goes here. Explain what you did and what technologies you used.</p>
+      <a href="https://github.com/your-github/project1" target="_blank">View on GitHub</a>
+    </div>
+
+    <div class="project">
+      <h2>Project 2: Another Project</h2>
+      <p>Another brief description of a project. Highlight the main features.</p>
+      <a href="https://github.com/your-github/project2" target="_blank">View on GitHub</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Eric Turn. All rights reserved.</p>
+  </footer>
+
+  <script src="../script.js"></script>
+</body>
+</html>
