--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
       <h1 class="sitename">Eric Turner</h1>
     </a>
 
-    <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+    <div class="social-links text-center">  
+      <a href="https://www.linkedin.com/in/eric-turner1/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/EricTurn" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
