--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero_background.JPG" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Eric Turner</h2>
